Fixed Data generation

--- a/Assignment 2/Preprocessor/Assignment-2-Preprocessor.ipynb
+++ b/Assignment 2/Preprocessor/Assignment-2-Preprocessor.ipynb
@@ -241,6 +241,7 @@
    "source": [
     "for state, cities in State_city_dictionary.items():\n",
     "    StateData = pd.DataFrame(columns=['source','target','value'])\n",
+    "    groupByCity = pd.DataFrame(columns=['source','value'])\n",
     "    for city in cities:\n",
     "        Filename = (glob.glob(\"../../Dataset/\" + city + \"*.csv\"))\n",
     "        if(city =='DeSoto'):\n",
@@ -278,13 +279,15 @@
     "                'target':  groupBySource['source'], \n",
     "                'value': groupBySource['value']\n",
     "            })\n",
+    "            groupCity = city_family_count.groupby('source').agg( {\"value\":\"sum\"} ).reset_index()\n",
+    "            groupByCity = pd.concat([groupByCity, groupCity], ignore_index=True)\n",
     "            StateData = pd.concat([family_plant_count, StateData], ignore_index=True)\n",
     "            StateData = pd.concat([city_family_count, StateData], ignore_index=True)\n",
     "         \n",
     "    \n",
     "    StateCityDataframe = pd.DataFrame(columns=['source','target','value'])\n",
     "    for city in cities:\n",
-    "        StateCityDataframe = pd.concat([pd.DataFrame([[state,city,1]], columns=StateCityDataframe.columns), StateCityDataframe], ignore_index=True)\n",
+    "        StateCityDataframe = pd.concat([pd.DataFrame([[state,city,groupByCity[groupByCity['source'] == city]['value'].values[0]]], columns=StateCityDataframe.columns), StateCityDataframe], ignore_index=True)\n",
     "    StateData = pd.concat([StateCityDataframe, StateData], ignore_index=True)\n",
     "    StateData.dropna(how='any', inplace=True)       \n",
     "    StateData.to_csv(state+'.csv', index = False)"
