--- a/Assignment 3/Preprocessor/Assignment-3-Preprocessor.ipynb
+++ b/Assignment 3/Preprocessor/Assignment-3-Preprocessor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3a32840b-f217-49cc-9567-5a31e02fe14f",
    "metadata": {},
    "outputs": [],
@@ -53,179 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "e36048dd-2584-4381-9120-d791c2f85f36",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        0010021895\n",
-      "1        0010021896\n",
-      "2        0010021897\n",
-      "3        0010021898\n",
-      "4        0010021899\n",
-      "            ...    \n",
-      "12478    3650022019\n",
-      "12479    3650022020\n",
-      "12480    3650022021\n",
-      "12481    3650022022\n",
-      "12482    3650022023\n",
-      "Name: StateCodes, Length: 12483, dtype: object\n",
-      "0        001\n",
-      "1        001\n",
-      "2        001\n",
-      "3        001\n",
-      "4        001\n",
-      "        ... \n",
-      "12478    365\n",
-      "12479    365\n",
-      "12480    365\n",
-      "12481    365\n",
-      "12482    365\n",
-      "Name: State, Length: 12483, dtype: object\n",
-      "final       State  Year   Jan   Feb   Mar   Apr   May   Jun   Jul   Aug   Sep   Oct  \\\n",
-      "0       001  1895  43.1  37.4  54.5  63.4  69.5  77.5  79.2  79.5  77.8  59.7   \n",
-      "1       001  1896  43.5  47.7  52.5  68.0  75.9  77.4  81.2  82.2  75.9  63.2   \n",
-      "2       001  1897  41.8  51.1  60.2  62.4  69.0  81.2  81.5  78.8  75.6  67.1   \n",
-      "3       001  1898  49.0  46.1  59.2  58.8  74.1  80.4  80.0  78.8  75.2  61.0   \n",
-      "4       001  1899  43.8  40.0  55.6  61.7  76.1  79.9  80.4  80.9  72.8  66.0   \n",
-      "...     ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   \n",
-      "12478   365  2019  45.1  48.8  52.2  62.4  70.0  76.9  80.8  81.8  78.4  63.4   \n",
-      "12479   365  2020  47.6  48.1  58.3  61.0  69.9  77.6  82.4  81.1  73.8  64.5   \n",
-      "12480   365  2021  44.8  42.6  56.0  60.8  68.8  78.2  80.3  80.4  75.2  66.0   \n",
-      "12481   365  2022  43.1  45.9  55.0  62.6  72.4  79.7  83.4  80.4  75.4  63.3   \n",
-      "12482   365  2023  48.2  50.4  54.8  61.6  69.9  76.5  82.8  82.6  76.0  65.5   \n",
-      "\n",
-      "        Nov   Dec  \n",
-      "0      53.2  44.9  \n",
-      "1      57.3  46.4  \n",
-      "2      54.2  47.4  \n",
-      "3      49.8  43.4  \n",
-      "4      55.3  44.7  \n",
-      "...     ...   ...  \n",
-      "12478  50.5  48.2  \n",
-      "12479  56.7  45.5  \n",
-      "12480  53.3  53.6  \n",
-      "12481  51.9  46.2  \n",
-      "12482 -99.9 -99.9  \n",
-      "\n",
-      "[12483 rows x 14 columns]\n",
-      "0        0010271895\n",
-      "1        0010271896\n",
-      "2        0010271897\n",
-      "3        0010271898\n",
-      "4        0010271899\n",
-      "            ...    \n",
-      "12478    3650272019\n",
-      "12479    3650272020\n",
-      "12480    3650272021\n",
-      "12481    3650272022\n",
-      "12482    3650272023\n",
-      "Name: StateCodes, Length: 12483, dtype: object\n",
-      "0        001\n",
-      "1        001\n",
-      "2        001\n",
-      "3        001\n",
-      "4        001\n",
-      "        ... \n",
-      "12478    365\n",
-      "12479    365\n",
-      "12480    365\n",
-      "12481    365\n",
-      "12482    365\n",
-      "Name: State, Length: 12483, dtype: object\n",
-      "final       State  Year   Jan   Feb   Mar   Apr   May   Jun   Jul   Aug   Sep   Oct  \\\n",
-      "0       001  1895  52.7  48.1  66.5  75.7  80.6  88.4  89.6  89.7  89.1  74.2   \n",
-      "1       001  1896  53.0  59.0  63.9  80.6  87.8  87.9  91.6  94.0  89.2  75.8   \n",
-      "2       001  1897  52.1  61.0  69.9  74.8  82.2  94.0  92.8  89.5  88.7  81.0   \n",
-      "3       001  1898  59.1  58.0  69.9  71.0  88.0  92.7  90.5  88.4  85.4  72.3   \n",
-      "4       001  1899  54.4  51.4  67.8  72.6  88.6  92.3  91.9  92.0  86.3  78.1   \n",
-      "...     ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   \n",
-      "12478   365  2019  55.5  59.6  63.7  74.8  81.0  88.7  92.4  93.6  90.8  75.9   \n",
-      "12479   365  2020  58.1  59.1  68.8  73.5  82.5  89.5  93.9  92.9  85.0  77.2   \n",
-      "12480   365  2021  54.9  53.3  68.4  73.6  80.6  89.4  90.9  91.4  87.6  78.3   \n",
-      "12481   365  2022  55.7  59.0  68.8  76.0  85.1  92.0  95.1  91.2  88.0  76.9   \n",
-      "12482   365  2023  59.0  62.0  66.6  74.4  81.6  88.6  94.5  94.9  88.5  78.3   \n",
-      "\n",
-      "        Nov   Dec  \n",
-      "0      65.1  57.1  \n",
-      "1      68.9  57.7  \n",
-      "2      67.1  58.0  \n",
-      "3      61.0  54.3  \n",
-      "4      67.8  55.6  \n",
-      "...     ...   ...  \n",
-      "12478  62.9  59.0  \n",
-      "12479  69.3  57.6  \n",
-      "12480  66.3  65.1  \n",
-      "12481  63.2  56.3  \n",
-      "12482 -99.9 -99.9  \n",
-      "\n",
-      "[12483 rows x 14 columns]\n",
-      "0        0010281895\n",
-      "1        0010281896\n",
-      "2        0010281897\n",
-      "3        0010281898\n",
-      "4        0010281899\n",
-      "            ...    \n",
-      "12478    3650282019\n",
-      "12479    3650282020\n",
-      "12480    3650282021\n",
-      "12481    3650282022\n",
-      "12482    3650282023\n",
-      "Name: StateCodes, Length: 12483, dtype: object\n",
-      "0        001\n",
-      "1        001\n",
-      "2        001\n",
-      "3        001\n",
-      "4        001\n",
-      "        ... \n",
-      "12478    365\n",
-      "12479    365\n",
-      "12480    365\n",
-      "12481    365\n",
-      "12482    365\n",
-      "Name: State, Length: 12483, dtype: object\n",
-      "final       State  Year   Jan   Feb   Mar   Apr   May   Jun   Jul   Aug   Sep   Oct  \\\n",
-      "0       001  1895  33.4  26.8  42.4  51.2  58.4  66.5  68.8  69.3  66.4  45.2   \n",
-      "1       001  1896  34.0  36.4  41.2  55.6  63.9  66.9  70.7  70.4  62.6  50.6   \n",
-      "2       001  1897  31.4  41.2  50.4  50.1  55.9  68.3  70.2  68.1  62.5  53.1   \n",
-      "3       001  1898  38.8  34.2  48.5  46.4  60.2  68.0  69.6  69.2  65.1  49.6   \n",
-      "4       001  1899  33.1  28.6  43.5  50.8  63.6  67.6  68.9  69.9  59.4  54.0   \n",
-      "...     ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...   \n",
-      "12478   365  2019  34.8  38.0  40.7  50.0  58.9  65.2  69.2  69.9  66.1  50.9   \n",
-      "12479   365  2020  37.0  37.1  47.8  48.5  57.4  65.7  70.9  69.3  62.5  51.8   \n",
-      "12480   365  2021  34.7  31.9  43.5  47.9  56.9  66.9  69.7  69.4  62.8  53.6   \n",
-      "12481   365  2022  30.5  32.8  41.2  49.2  59.7  67.3  71.6  69.7  62.7  49.8   \n",
-      "12482   365  2023  37.3  38.8  43.1  48.8  58.2  64.4  71.0  70.2  63.5  52.7   \n",
-      "\n",
-      "        Nov   Dec  \n",
-      "0      41.4  32.7  \n",
-      "1      45.8  35.1  \n",
-      "2      41.4  36.9  \n",
-      "3      38.7  32.5  \n",
-      "4      42.8  33.8  \n",
-      "...     ...   ...  \n",
-      "12478  38.2  37.4  \n",
-      "12479  44.0  33.4  \n",
-      "12480  40.2  42.1  \n",
-      "12481  40.5  36.1  \n",
-      "12482 -99.9 -99.9  \n",
-      "\n",
-      "[12483 rows x 14 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Filenames = (glob.glob(\"*.txt\"))\n",
-    "for i in Filenames:\n",
-    "    finalDataFrame = pd.DataFrame(columns=['State','Year','Value')\n",
-    "    data = pd.read_csv(i, header=None ,names=['StateCodes','Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'], delimiter=r'\\s+',  dtype={'StateCodes': str}).reset_index()\n",
-    "    finalDataFrame['State'] = data['StateCodes'].str[:3]\n",
-    "    finalDataFrame['Year'] = data['StateCodes'].str[-4:]\n",
-    "    finalDataFrame[['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']] = data[['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']]\n",
-    "    finalDataFrame.to_csv(i.split('.')[0]+'.csv', index=False)\n",
+    "minimumFile = (glob.glob(\"../data/minData.txt\"))\n",
+    "maximumFile = (glob.glob(\"../data/maxData.txt\"))\n",
+    "FinalDataFrame = pd.DataFrame()\n",
+    "minData = pd.read_csv(minimumFile[0], header=None ,names=['StateCodes','Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'], delimiter=r'\\s+',  dtype={'StateCodes': str}).reset_index()\n",
+    "maxData = pd.read_csv(maximumFile[0], header=None ,names=['StateCodes','Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'], delimiter=r'\\s+',  dtype={'StateCodes': str}).reset_index()\n",
+    "FinalDataFrame['State'] = minData['StateCodes'].str[:3]\n",
+    "FinalDataFrame['Year'] = minData['StateCodes'].str[-4:]\n",
+    "FinalDataFrame['MinTemperature'] = minData.loc[:,['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']].mean(axis=1)\n",
+    "FinalDataFrame['MaxTemperature'] = maxData.loc[:,['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']].mean(axis=1)\n",
+    "FinalDataFrame = FinalDataFrame.round(2)\n",
+    "FinalDataFrame.to_csv('../data/RigidLines/RidgeLine.csv', index=False)\n",
     "    \n",
     "    "
    ]
